Подкорректирована авторизация
